--- a/src/main/resources/static/css/board/post_view.css
+++ b/src/main/resources/static/css/board/post_view.css
@@ -111,7 +111,7 @@ ul {
 }
 
 .main__post-info-decl-box > div > p:nth-child(1)::before {
-  content: url('../img/view.png');
+  content: url('/imgs/administrator/fragment/view.png');
   position: relative;
   right: 8px;
   top: 1px;
@@ -122,7 +122,7 @@ ul {
 }
 
 .main__post-info-decl-box > div > p:nth-child(2)::before {
-  content: url('../img/write_date.png');
+  content: url('/imgs/administrator/fragment/write_date.png');
   position: relative;
   right: 8px;
   top: 1px;
