--- a/src/main/resources/static/css/mypage/myPageInt_sticker.css
+++ b/src/main/resources/static/css/mypage/myPageInt_sticker.css
@@ -447,78 +447,94 @@ footer div {
   height: 100px;
 }
 
-/* -------------------------------------------------------------- */
+/* -----------------------------------------------------------------------------------------------------------------
+새로운 css */
 
-.main__myInfo-modi-out-container {
+.main__sticker-request-content-container {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
-.main__myInfo-modi-in-container {
-  width: 1000px;
+.main__sticker-request-center-box {
+  width: 1440px;
 }
 
-.main__myInfo-modify-table {
-  width: 100%;
+.main__sticker-request-center-box > section > h1 {
   text-align: left;
-  border-collapse: collapse;
-  border: 1px solid rgb(58, 56, 56);
+  padding-left: 10px;
+  margin-bottom: 10px;
 }
 
-.main__myInfo-title-box > h3 {
-  margin: 10px 0;
+.main__sticker-request-center-box > section {
+  display: flex;
 }
 
-.main__myInfo-modify-boxs {
-  margin-bottom: 8px;
-  box-sizing: border-box;
+.main__sticker-request-center-box > section {
+  margin-top: 10px;
 }
 
-.main__myInfo-modify-label {
-  display: block;
-  height: 45px;
-  padding: 8px 12px;
-  border: 1px solid;
+.main__sticker-request-center-box > section > span > img {
+  width: 130px;
+  height: 130px;
+  padding-left: 150px;
 }
 
-.modify-input-box {
+.main__sticker-request-center-box > section:nth-child(2) {
+  border-radius: 10px;
+  border: 5px solid #2bc1bf;
+  padding: 50px;
+}
+
+.main__sticker-request-center-box > section > div {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
+  justify-content: space-evenly;
+  font-size: 18px;
+  color: rgb(31, 29, 28);
 }
 
-.modify-input-box > span {
-  margin-bottom: 1px;
-  font-size: 10px;
-  color: rgb(87, 83, 83);
+.main__sticker-request-center-box > section > div > p:nth-child(1) {
+  font-size: 20px;
 }
 
-.modify-input-box > input {
-  width: 100%;
-  height: 24px;
-  font-size: 16px;
-  text-align: left;
-  color: rgb(44, 42, 42);
-}
-
-.modify-password-warm {
-  padding-top: 8px;
-  box-sizing: border-box;
+.main__sticker-request-center-box > section:nth-child(n + 3) {
   display: flex;
-}
-
-.modify-password-warm > li {
-  color: rgb(87, 83, 83);
-  border: 1px solid rgb(199, 192, 192);
-  border-radius: 4px;
-  padding: 0 4px 0 2px;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 16px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
+  flex-direction: column;
   align-items: center;
+}
+
+.main__sticker-request-center-box > section > button {
+  margin-top: 15px;
+  width: 150px;
+  border-radius: 10px;
+  height: 40px;
+  background-color: whitesmoke;
+  font-weight: bold;
+  color: #2bc1bf;
+  border-color: #2bc1bf;
+  font-size: 20px;
+}
+
+.main__sticker-request-center-box > section > p {
+  margin-top: 20px;
+  color: rgb(238, 62, 62);
+  font-weight: bold;
+}
+
+.main__sticker-request-center-box > section > button:hover {
+  background-color: #2bc1bf;
+  color: whitesmoke;
+}
+
+.main__sticker-request-center-box > section:nth-child(4) > div {
+  margin-top: 15px;
+  width: 150px;
+  border-radius: 10px;
+  height: 40px;
+  background-color: #2bc1bf;
+  font-weight: bold;
+  color: whitesmoke;
+  border-color: #2bc1bf;
+  text-align: center;
+  font-size: 20px;
 }
