--- a/src/main/resources/templates/administrator/fragment/admin_header.html
+++ b/src/main/resources/templates/administrator/fragment/admin_header.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/admin_header.css" />
-    <script defer src="../js/admin_header.js"></script>
+    <link rel="stylesheet" th:href="@{/css/administrator/fragment/admin_header.css}" />
+    <script defer th:src="@{/js/administrator/fragment/admin_header.js}"></script>
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header th:fragment="admin-header">
       <h1>히포북</h1>
       <div class="header__admin-icon-box">
         <div class="header__admin-icon" data-name="notice" data-clicked="F">
-          <img src="../img/notice.png" alt="" />
+          <img th:src="@{/imgs/administrator/fragment/notice.png}" alt="" />
         </div>
         <div class="header__admin-icon" data-name="admin" data-clicked="F">
-          <img src="../img/menu_user.png" alt="" />
+          <img th:src="@{/imgs/administrator/fragment/menu_user.png}" alt="" />
         </div>
       </div>
-    </header>
+
     <div class="header__notice-info">
       <div class="header__notice-count-box">
         <h4>새로운 알림(<span>1</span>)</h4>
@@ -110,7 +110,7 @@
         </article>
       </div>
       <div class="header__notice-content-box-none">
-        <img src="../img/notice-none-bell.png" alt="" />
+        <img th:src="@{/imgs/administrator/fragment/notice-none-bell.png}" alt="" />
         <span>새로운 알림이 없습니다</span>
       </div>
     </div>
@@ -126,5 +126,6 @@
         <span>로그아웃</span>
       </div>
     </div>
+    </header>
   </body>
 </html>
