--- a/src/main/resources/templates/board/post_view.html
+++ b/src/main/resources/templates/board/post_view.html
@@ -1,175 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/post_view.css" />
-    <script defer src="../js/post_view.js"></script>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" th:href="@{/css/board/post_view.css}"/>
+    <script defer th:src="@{/js/board/post_view.js}"></script>
     <title>Document</title>
-  </head>
-  <body>
-    <header></header>
-    <div class="main__post-content-container">
-      <main class="main__post-content-inner-box">
+</head>
+<body>
+<header></header>
+<div class="main__post-content-container">
+    <main class="main__post-content-inner-box">
         <div class="main__post-type-modify-back-btn-box">
-          <h1>자유게시판</h1>
-          <div>
-            <span><a href="">수정</a></span>
-            <span><a href="">목록</a></span>
-          </div>
+            <h1>자유게시판</h1>
+            <div>
+                <span><a href="">수정</a></span>
+                <span><a href="">목록</a></span>
+            </div>
         </div>
         <div class="main__post-title-box">
-          <span>test title</span>
+            <span>test title</span>
         </div>
         <div class="main__post-info-decl-box">
-          <span><a href="">writer</a></span>
-          <div>
-            <p>68</p>
-            <p>2024.04.22</p>
-            <span><img src="../img/decl.png" alt="" />
-          </div>
+            <span><a href="">writer</a></span>
+            <div>
+                <p>68</p>
+                <p>2024.04.22</p>
+                <span><img th:src="@{/imgs/administrator/fragment/decl.png}" alt=""/></span>
+            </div>
         </div>
         <div class="main__post-content-box">
-          test contentbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
+            test contentbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
         </div>
         <div class="main__post-like-btn-box">
-          <a href=""><img src="../img/like.png" alt="" /><span>좋아요</span></a>
-          <div>0명</div>
+            <a href=""><img th:src="@{/imgs/administrator/fragment/like.png}" alt=""/><span>좋아요</span></a>
+            <div>0명</div>
         </div>
         <div class="main__post-comment-search-list-box">
-          <section class="main__post-comment-count-box">
-            <h2>댓글</h2>
-            <span>1</span>
-          </section>
-          <ul class="main__post-comment-result-box">
-            <li>
-              <div>
-                <p>
+            <section class="main__post-comment-count-box">
+                <h2>댓글</h2>
+                <span>1</span>
+            </section>
+            <ul class="main__post-comment-result-box">
+                <li>
+                    <div>
+                        <p>
                   <span>
                     <a href="">commender</a>
                     <span>2024.04.22 오후 01:59:25</span>
                   </span>
-                  <img src="../img/decl.png" alt="">
-                </p>
-                <div>test comment</div>
-              </div>
-            </li>
-          </ul>
-          <section class="main__post-comment-page-box">
+                            <img class="comment-decl-btn" th:src="@{/imgs/administrator/fragment/decl.png}" alt="">
+                        </p>
+                        <div>test comment</div>
+                    </div>
+                </li>
+            </ul>
+            <section class="main__post-comment-page-box">
             <span
-              ><a href=""><img src="../img/left_sh.png" alt="" /></a
+            ><a href=""><img th:src="@{/imgs/administrator/fragment/left_sh.png}" alt=""/></a
             ></span>
-            <a href="">1</a>
-            <a href="">2</a>
-            <a href="">3</a>
-            <a href="">4</a>
-            <a href="">5</a>
-            <span
-              ><a href=""><img src="../img/right-sh.png" alt="" /></a
-            ></span>
-          </section>
+                <a href="">1</a>
+                <a href="">2</a>
+                <a href="">3</a>
+                <a href="">4</a>
+                <a href="">5</a>
+                <span
+                ><a href=""><img th:src="@{/imgs/administrator/fragment/right-sh.png}" alt=""/></a
+                ></span>
+            </section>
         </div>
         <div class="main__post-comment-write-box">
-          <form action="" method="post">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <div>
-              <span>(<strong>0</strong>/200)</span>
-              <button>등록</button>
-            </div>
-          </form>
+            <form action="" method="post">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <div>
+                    <span>(<strong>0</strong>/200)</span>
+                    <button>등록</button>
+                </div>
+            </form>
         </div>
-      </main>
-    </div>
-    <div class="modal-decl-req-back">
-      <div class="modal-decl-req-box">
+    </main>
+</div>
+<div class="modal-decl-req-back">
+    <div class="modal-decl-req-box">
         <h2>신고하기</h2>
         <div class="modal-decl-opt-content-box">
-          <input type="hidden" data-reasonnow="-1" />
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="1"
-              value="단순 비방, 욕설 등 불쾌감을 주는 내용"
-            />
-            <div class="modal-decl-reason-box">
-              <p>단순 비방, 욕설 등 불쾌감을 주는 내용</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="2"
-              value="음란성 또는 청소년에게 부적합"
-            />
-            <div class="modal-decl-reason-box">
-              <p>음란성 또는 청소년에게 부적합</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="3"
-              value="주제와 관련 없거나 부적절한 홍보"
-            />
-            <div class="modal-decl-reason-box">
-              <p>주제와 관련 없거나 부적절한 홍보</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="4"
-              value="스포일러가 포함된 내용"
-            />
-            <div class="modal-decl-reason-box">
-              <p>스포일러가 포함된 내용</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="5"
-              id="decl-reason"
-              value=""
-            />
-            <div class="modal-decl-reason-box">
-              <p>기타</p>
-              <span></span>
-            </div>
-          </label>
-          <div class="decl-reason-other-box-outer">
-            <label class="decl-reason-other-box">
-              <div class="decl-other-content-box">
-                <span>신고사유*</span>
+            <input type="hidden" data-reasonnow="-1"/>
+            <label>
                 <input
-                  type="text"
-                  placeholder="신고사유를 작성하세요"
-                  maxlength="50"
-                  class="other-reason"
+                        type="radio"
+                        name="decl_reason"
+                        data-reasonnow="1"
+                        value="단순 비방, 욕설 등 불쾌감을 주는 내용"
                 />
-              </div>
-              <div class="decl-other-text-delete">
-                <button type="button"></button>
-              </div>
+                <div class="modal-decl-reason-box">
+                    <p>단순 비방, 욕설 등 불쾌감을 주는 내용</p>
+                    <span></span>
+                </div>
             </label>
-          </div>
+            <label>
+                <input
+                        type="radio"
+                        name="decl_reason"
+                        data-reasonnow="2"
+                        value="음란성 또는 청소년에게 부적합"
+                />
+                <div class="modal-decl-reason-box">
+                    <p>음란성 또는 청소년에게 부적합</p>
+                    <span></span>
+                </div>
+            </label>
+            <label>
+                <input
+                        type="radio"
+                        name="decl_reason"
+                        data-reasonnow="3"
+                        value="주제와 관련 없거나 부적절한 홍보"
+                />
+                <div class="modal-decl-reason-box">
+                    <p>주제와 관련 없거나 부적절한 홍보</p>
+                    <span></span>
+                </div>
+            </label>
+            <label>
+                <input
+                        type="radio"
+                        name="decl_reason"
+                        data-reasonnow="4"
+                        value="스포일러가 포함된 내용"
+                />
+                <div class="modal-decl-reason-box">
+                    <p>스포일러가 포함된 내용</p>
+                    <span></span>
+                </div>
+            </label>
+            <label>
+                <input
+                        type="radio"
+                        name="decl_reason"
+                        data-reasonnow="5"
+                        id="decl-reason"
+                        value=""
+                />
+                <div class="modal-decl-reason-box">
+                    <p>기타</p>
+                    <span></span>
+                </div>
+            </label>
+            <div class="decl-reason-other-box-outer">
+                <label class="decl-reason-other-box">
+                    <div class="decl-other-content-box">
+                        <span>신고사유*</span>
+                        <input
+                                type="text"
+                                placeholder="신고사유를 작성하세요"
+                                maxlength="50"
+                                class="other-reason"
+                        />
+                    </div>
+                    <div class="decl-other-text-delete">
+                        <button type="button"></button>
+                    </div>
+                </label>
+            </div>
         </div>
         <p>신고 사유를 선택 후 신고해주세요</p>
         <div class="modal-decl-btn-box">
-          <button type="button" class="decl-close-btn">취소</button>
-          <button type="button" class="decl-process-btn">신고</button>
+            <button type="button" class="decl-close-btn">취소</button>
+            <button type="button" class="decl-process-btn">신고</button>
         </div>
-      </div>
     </div>
-    <footer></footer>
-  </body>
+</div>
+<footer></footer>
+</body>
 </html>
