"mypageInt html 소개 버튼 추가", "mypage Mapper 생성"

--- a/src/main/resources/static/css/mypage/myPageInt.css
+++ b/src/main/resources/static/css/mypage/myPageInt.css
@@ -204,6 +204,15 @@ input[type="file"] {
   overflow: hidden;
 }
 
+.introduce-save-btn{
+  color: white;
+  width: 80px;
+  opacity: 0.8;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .introduce-pencil{
   display: flex;
