--- a/src/main/resources/templates/user/idpassword.html
+++ b/src/main/resources/templates/user/idpassword.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>계정 정보 입력 | 히포북</title>
 <!--    <link rel="stylesheet" href="/HBREGISTER/css/login.css">-->
-    <link rel="stylesheet" href="/css/user/login.css">
-    <link rel="stylesheet" href="/css/user/joinAuth.css">
+    <link rel="stylesheet" th:href="@{/css/user/joinAuth.css}">
+    <link rel="stylesheet" th:href="@{/css/user/hippobook.css}">
 </head>
 <body data-theme="light">
     <div data-a-1120 id="wrap" class="web-mount">
@@ -20,7 +20,7 @@
 <!--                    </div>-->
 <!--                </div>-->
                 <div data-g-1180 class="login-content">
-                    <img data-b-1130 class="logo-picture" src="/images/user/Logo.png" width="79px">
+                    <img data-b-1130 class="logo-picture" th:src="@{/images/user/Logo.png}" width="79px">
                     <h3 data-g-1180 class="title">계정 정보 입력</h3>
                     <p data-g-1180 class="sub-title">사용할 아이디와 패스워드를 입력하세요</p>
                     <div data-g-1180 class="input-item">
@@ -32,7 +32,7 @@
                                             아이디
                                             <sup>*</sup>
                                         </span>
-                                        <input autocomplete="off" id="input-237" aria-labelledby="input-237-label" aria-errormessage="input-237-messeage" type="text"
+                                        <input autocomplete="off" id="input-237" aria-labelledby="input-237-label" type="text"
                                         placeholder="아이디 입력" class="mds-input-field">
                                     </div>
                                     <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style="display: none;"></button>
@@ -70,8 +70,7 @@
                                         비밀번호 재입력
                                         <sup>*</sup>
                                     </span>
-                                    <input autocomplete="off" id="input-239" aria-labelledby="input-239-label" aria-errormessage="input-239-message" type="password"
-                                    placeholder="비밀번호 재입력" class="mds-input-field">
+                                    <input autocomplete="off" id="input-239" aria-labelledby="input-239-label" type="password" placeholder="비밀번호 재입력" class="mds-input-field">
                                 </div>
                                 <button type="button" class="secret-button">
                                     <i class="icon-eye_off"></i>
@@ -82,13 +81,12 @@
                 </div>
                 <div data-g-1180 class="button-area">
                     <button data-g-1180 type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-                        <span onclick="location.href='/HBREGISTER/HTML/profileSetting.html'">다음</span>
+                        <a th:href="@{/user/profilesetting}">다음</a>
                     </button>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-
 </body>
 </html>
