--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="EUC-KR">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="EUC-KR">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>·Î±×ÀÎ | È÷Æ÷ºÏ</title>
-    <link rel="stylesheet" href="/css/user/login.css">
-    <link rel="stylesheet" href="/css/user/hepobook.css">
+  <title>ë¡œê·¸ì¸ | ížˆí¬ë¶</title>
+    <link rel="stylesheet" th:href="@{/css/user/login.css}">
+    <link rel="stylesheet" th:href="@{/css/user/hippobook.css}">
 <!--  <link rel="stylesheet" href="/HBREGISTER/css/joinAuth.css">-->
 </head>
 <body data-theme="light">
@@ -24,9 +24,9 @@
 <!--      </div>-->
 <!--    </div>-->
     <div data-b-1130 class="login-content">
-      <img data-b-1130 class="logo-picture" src="/images/user/Logo.png" width="79px">
-        <h3 data-b-1130 class="title">È÷Æ÷ºÏ</h3>
-      <p data-b-1130 class="sub-title">³ª¸¸ÀÇ ÀÛÀº µµ¼­°ü È÷Æ÷ºÏ</p>
+      <img data-b-1130 class="logo-picture" th:src="@{/images/user/Logo.png}" width="79px">
+        <h3 data-b-1130 class="title">ížˆí¬ë¶</h3>
+      <p data-b-1130 class="sub-title">ë‚˜ë§Œì˜ ìž‘ì€ ë„ì„œê´€ ížˆí¬ë¶</p>
       <div data-b-1130 class="input-item">
         <div data-b-1130 class="mds-input input mds-input--default mds-input--left">
           <label>
@@ -34,15 +34,14 @@
 
               <div class="input">
                                 <span id="input-278-label" class="label">
-                                    "¾ÆÀÌµð"
+                                    ì•„ì´ë””
 
                                 </span>
-                <input autocomplete="off" id="input-278" aria-labelledby="input-278-label"
-                       aria-errormessage="input-278-message" type="text" placeholder="¾ÆÀÌµð ÀÔ·Â"
+                <input autocomplete="off" id="input-278" aria-labelledby="input-278-label" type="text" placeholder="ì•„ì´ë”” ìž…ë ¥"
                        class="mds-input-field">
               </div>
 
-              <button type="button" aria-label="³»¿ë »èÁ¦" class="mds-icon--input-delete clear-button" style="display: none;"></button>
+              <button type="button" aria-label="ë‚´ìš© ì‚­ì œ" class="mds-icon--input-delete clear-button" style="display: none;"></button>
 
 
             </div>
@@ -59,36 +58,35 @@
             </div>
             <div class="input">
                                 <span id="input-279-label" class="label">
-                                    "ºñ¹Ð¹øÈ£"
+                                    ë¹„ë°€ë²ˆí˜¸
 
                                 </span>
-              <input autocomplete="off" id="input-279" aria-labelledby="input-279-label"
-                     aria-errormessage="input-279-message" type="password" placeholder="ºñ¹Ð¹øÈ£ ÀÔ·Â" class="mds-input-field">
+              <input autocomplete="off" id="input-279" aria-labelledby="input-279-label" type="password" placeholder="ë¹„ë°€ë²ˆí˜¸ ìž…ë ¥" class="mds-input-field">
             </div>
 
-            <button type="button" aria-label="³»¿ë »èÁ¦" class="mds-icon--input-delete clear-button" style="display: none;"></button>
+            <button type="button" aria-label="ë‚´ìš© ì‚­ì œ" class="mds-icon--input-delete clear-button" style="display: none;"></button>
         </label>
       </div>
     </div>
     <div data-b-1130 class="button-area mt16">
       <button data-b-1130 type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-        <span>·Î±×ÀÎ</span>
+        <span>ë¡œê·¸ì¸</span>
       </button>
     </div>
     <ul data-b-1130 class="login-sub-menu">
       <li data-b-1130>
-        <a data-b-1130 onclick="location.href='/HBREGISTER/HTML/register.html'">È¸¿ø°¡ÀÔ</a>
+        <a data-b-1130 th:href="@{/user/register}">íšŒì›ê°€ìž…</a>
       </li>
-      <li data-b-1130>
-        <a data-b-1130 href="">°èÁ¤ Á¤º¸ Ã£±â</a>
-      </li>
-      <li data-b-1130>
-        <a data-b-1130 href="">±â¾÷È¸¿ø ·Î±×ÀÎ</a>
-      </li>
+<!--      <li data-b-1130>-->
+        <a data-b-1130 href="">ê³„ì • ì •ë³´ ì°¾ê¸°</a>
+<!--      </li>-->
+<!--      <li data-b-1130>-->
+<!--        <a data-b-1130 href="">ê¸°ì—…íšŒì› ë¡œê·¸ì¸</a>-->
+<!--      </li>-->
     </ul>
   </div>
   </div>
 </section>
-
+</div>
 </body>
 </html>
