--- a/src/main/resources/templates/user/phoneinfo.html
+++ b/src/main/resources/templates/user/phoneinfo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>휴대폰인증 | 히포북</title>
-  <link rel="stylesheet" href="/css/user/login.css">
-  <link rel="stylesheet" href="/css/user/hepobook.css">
+  <link rel="stylesheet" th:href="@{/css/user/login.css}">
+  <link rel="stylesheet" th:href="@{/css/user/hippobook.css}">
 <!--  <link rel="stylesheet" href="/HBREGISTER/css/joinAuth.css">-->
 </head>
 <body data-theme="light">
@@ -21,7 +21,7 @@
 <!--        </div>-->
 <!--      </div>-->
       <div data-e-1160 class="login-content" style=" width: 520px; height: 919px;">
-        <img data-b-1130 class="logo-picture" src="/images/user/Logo.png" width="79px">
+        <img data-b-1130 class="logo-picture" th:src="@{/images/user/Logo.png}" width="79px">
         <h3 data-e-1160 class="title">휴대폰 인증</h3>
         <p data-e-1160 class="sub-title">최초 1회 휴대폰 인증이 필요합니다.</p>
         <div data-e-1160 class="input-item fade-in">
@@ -114,8 +114,7 @@
                   <span id="input-157-label" class="label">
                     휴대폰 번호
                   </span>
-                  <input autocomplete="off" id="input-157" aria-labelledby="input-157-label" aria-errormessage="input-157-message" type="number"
-                  placeholder="01012345678" pattern="\d*" class="mds-input-field">
+                  <input autocomplete="off" id="input-157" aria-labelledby="input-157-label" type="number" placeholder="01012345678" pattern="\d*" class="mds-input-field">
                 </div>
                 <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style="display: none;"></button>
               </div>
@@ -127,9 +126,42 @@
         </p>
         <div data-e-1160 class="button-area">
           <button data-e-1160 type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-            <span onclick="location.href='/HBREGISTER/HTML/phoneInfoCode.html'">다음</span>
+            <a th:href="@{/user/phoneinfocode}">다음</a>
           </button>
         </div>
+        <div aria-modal="true" role="alertdialog" class="mds-dialog agency-popup mds-dialog--open mds-dialog--action mds-dialog--bottom mds-dialog--mobile">
+          <div class="mds-dialog--wrap">
+            <div class="mds-dialog--inner">
+              <div class="mds-dialog--header">
+                <strong id="dialog-178-title">통신사 선택</strong>
+                <em class="mds-font--body02"></em>
+              </div>
+              <div class="mds-dialog--body">
+                <ul class="contents">
+                  <li>
+                    <button type="button">SKT</button>
+                  </li>
+                  <li>
+                    <button type="button">KT</button>
+                  </li>
+                  <li>
+                    <button type="button">LG U+</button>
+                  </li>
+                  <li>
+                    <button type="button">SKT 알뜰폰</button>
+                  </li>
+                  <li>
+                    <button type="button">KT 알뜰폰</button>
+                  </li>
+                  <li>
+                    <button type="button">LG U+ 알뜰폰</button>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       </div>
       </div>
     </section>
