--- a/src/main/resources/templates/user/phoneinfocode.html
+++ b/src/main/resources/templates/user/phoneinfocode.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="EUC-KR" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="EUC-KR">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ÀÎÁõ ¹øÈ£ | È÷Æ÷ºÏ</title>
-    <link rel="stylesheet" href="/css/user/login.css">
-    <link rel="stylesheet" href="/css/user/hepobook.css">
+    <title>ì¸ì¦ ë²ˆí˜¸ | ížˆí¬ë¶</title>
+    <link rel="stylesheet" th:href="@{/css/user/login.css}">
+    <link rel="stylesheet" th:href="@{/css/user/hippobook.css}">
     <script defer th:src="@{/js/time/time.js}"></script>
 </head>
 <body data-theme="light">
@@ -20,9 +20,9 @@
                 </div>
             </div>
             <div data-b-1130 class="login-content">
-                <img data-b-1130 class="logo-picture" src="/images/user/Logo.png">
-                <h3 data-b-1130 class="title">ÀÎÁõ¹øÈ£ È®ÀÎ</h3>
-                <p data-b-1130 class="sub-title">ÈÞ´ëÆùÀ¸·Î ¹ß¼ÛÇÑ ÀÎÁõ¹øÈ£¸¦ ÀÔ·ÂÇØÁÖ¼¼¿ä</p>
+                <img data-b-1130 class="logo-picture" th:src="@{/images/user/Logo.png}">
+                <h3 data-b-1130 class="title">ì¸ì¦ë²ˆí˜¸ í™•ì¸</h3>
+                <p data-b-1130 class="sub-title">íœ´ëŒ€í°ìœ¼ë¡œ ë°œì†¡í•œ ì¸ì¦ë²ˆí˜¸ë¥¼ ìž…ë ¥í•´ì£¼ì„¸ìš”</p>
                 <div data-b-1130 class="input-item">
                     <div data-b-1130 class="mds-input input mds-input--default mds-input--left">
                         <label>
@@ -30,29 +30,30 @@
 
                                 <div class="input">
                                 <span id="input-278-label" class="label">
-                                    ÀÎÁõ¹øÈ£
+                                    ì¸ì¦ë²ˆí˜¸
 
                                 </span>
-                                    <input autocomplete="off" id="input-278" aria-labelledby="input-278-label"
-                                           aria-errormessage="input-278-message" type="text" placeholder="ÀÎÁõ¹øÈ£ 6ÀÚ¸® ÀÔ·Â"
+                                    <input autocomplete="off" id="input-278" aria-labelledby="input-278-label" type="text" placeholder="ì¸ì¦ë²ˆí˜¸ 6ìžë¦¬ ìž…ë ¥"
                                            class="mds-input-field">
                                 </div>
-                                <button type="button" aria-label="³»¿ë »èÁ¦" class="mds-icon--input-delete clear-button" style="display: none;"></button>
+                                <button type="button" aria-label="ë‚´ìš© ì‚­ì œ" class="mds-icon--input-delete clear-button" style="display: none;"></button>
                                 <span class="time">0:00</span>
                             </div>
                         </label>
                     </div>
                 </div>
                 <p class="text">
-                    ÀÎÁõ¹øÈ£°¡ ¿ÀÁö ¾Ê´Â´Ù¸é?
-                    <button type="button" class="text-button">Àç¹ß¼Û</button>
+                    ì¸ì¦ë²ˆí˜¸ê°€ ì˜¤ì§€ ì•ŠëŠ”ë‹¤ë©´?
+                    <button type="button" class="text-button">ìž¬ë°œì†¡</button>
                 </p>
                 <div data-b-1130 class="button-area mt16">
                     <button data-b-1130 type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-                        <span onclick="location.href='/HBREGISTER/HTML/idPassword.html'">´ÙÀ½</span>
+                        <a th:href="@{/user/idpassword}">ë‹¤ìŒ</a>
                     </button>
                 </div>
             </div>
+        </div>
     </section>
+</div>
 </body>
 </html>
