--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원가입 | 히포북</title>
-  <link rel="stylesheet" href="/css/user/login.css">
-  <link rel="stylesheet" href="/css/user/hepobook.css">
+  <link rel="stylesheet" th:href="@{/css/user/login.css}">
+  <link rel="stylesheet" th:href="@{/css/user/hippobook.css}">
 <!--  <link rel="stylesheet" href="/HBREGISTER/css/joinAuth.css">-->
 </head>
 <body data-theme="light">
@@ -22,7 +22,7 @@
 <!--      </div>-->
 <!--    </div>-->
     <div data-d-1150 class="login-content" style="width: 520px; height: 919px;">
-      <img data-b-1130 class="logo-picture" src="../img/Logo.png" width="79px">
+      <img data-b-1130 class="logo-picture" th:src="@{/images/user/Logo.png}" width="79px">
       <h3 data-d-1150 class="title">히포북 회원가입</h3>
       <p data-d-1150 class="sub-title">서비스를 이용하려면 약관 동의가 필요합니다</p>
       <div data-d-1150 class="input-item row agreement-all">
@@ -144,7 +144,7 @@
         <span>다음</span>
         </button>
         </div>
-      <div data-d-1150 aria-model="true" role="alertdialog" aria-labelledby="dialog-198-title" class="mds-dialog mds-dialog--open">
+<!--      <div data-d-1150 aria-model="false" role="alertdialog" aria-labelledby="dialog-198-title" class="mds-dialog mds-dialog&#45;&#45;open">-->
         <div class="mds-dialog--wrap">
           <div class="mds-dialog--inner">
             <div class="mds-dialog--header">
@@ -166,7 +166,7 @@
           </div>
           <div class="mds-dialog--footer">
             <button data-d-1150 type="submit" class="apply mds-button mds-button--primary mds-button--h56" >
-              <span onclick="location.href='/HBREGISTER/HTML/phoneInfo.html'">확인</span>
+              <a th:href="@{/user/phoneinfo}">확인</a>
             </button>
           </div>
         </div>
