관리자 페이지 a태그 페이지 이동 매핑

--- a/src/main/resources/templates/administrator/admin_user.html
+++ b/src/main/resources/templates/administrator/admin_user.html
@@ -30,16 +30,16 @@
               <!-- a태그 경로 지정 -->
               <ul>
                 <li class="active">
-                  <a href=""><img th:src="@{/imgs/administrator/fragment/user.png}" alt="" /></a>
+                  <a th:href="@{/admin/user}"><img th:src="@{/imgs/administrator/fragment/user.png}" alt="" /></a>
                 </li>
                 <li>
-                  <a href=""><img th:src="@{/imgs/administrator/fragment/chart.png}" alt="" /></a>
+                  <a th:href="@{/admin/chart}"><img th:src="@{/imgs/administrator/fragment/chart.png}" alt="" /></a>
                 </li>
                 <li>
-                  <a href=""><img th:src="@{/imgs/administrator/fragment/declaration.png}" alt="" /></a>
+                  <a th:href="@{/admin/declaration}"><img th:src="@{/imgs/administrator/fragment/declaration.png}" alt="" /></a>
                 </li>
                 <li>
-                  <a href=""><img th:src="@{/imgs/administrator/fragment/hippo.png}" alt="" /></a>
+                  <a th:href="@{/admin/follow}"><img th:src="@{/imgs/administrator/fragment/hippo.png}" alt="" /></a>
                 </li>
               </ul>
             </div>
@@ -47,16 +47,16 @@
               <!-- a태그 경로 지정 -->
               <ul>
                 <li class="active">
-                  <a href=""><span>회원 정보 조회</span></a>
+                  <a th:href="@{/admin/user}"><span>회원 정보 조회</span></a>
                 </li>
                 <li>
-                  <a href=""><span>방문수 통계 조회</span></a>
+                  <a th:href="@{/admin/chart}"><span>방문수 통계 조회</span></a>
                 </li>
                 <li>
-                  <a href=""><span>신고글 관리</span></a>
+                  <a th:href="@{/admin/declaration}"><span>신고글 관리</span></a>
                 </li>
                 <li>
-                  <a href=""><span>팔로우 스티커 승인</span></a>
+                  <a th:href="@{/admin/follow}"><span>팔로우 스티커 승인</span></a>
                 </li>
               </ul>
             </div>
