--- a/src/main/resources/templates/feed/feedpage.html
+++ b/src/main/resources/templates/feed/feedpage.html
@@ -132,7 +132,7 @@
                     <button class="feed_follow_btn">팔로우</button>
                 </div>
                 <div class="feed_cardimg">
-                    <img src="/images/book.png" alt="">
+                    <img th:src="@{/images/feed/book.png}" alt="">
                 </div>
                 <div class="feed_likebox">
                     <button class="feed_like_btn">
