--- a/src/main/resources/static/css/feed/readwrite.css
+++ b/src/main/resources/static/css/feed/readwrite.css
@@ -167,7 +167,7 @@ a{
 
 .read_onelinebox{
     width: 100%;
-    height: 80px;
+    height: 100%;
     padding: 10px 0; 
 }
 
@@ -193,6 +193,7 @@ a{
     height: 50px;
     font-size: 17px;
 }
+
 
 .read_titlebox, .read_datebox{
     width: 100%;
