--- a/src/main/resources/templates/feed/postwrite.html
+++ b/src/main/resources/templates/feed/postwrite.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>히포북</title>
-    <link rel="stylesheet" href="/css/readwrite.css" />
-    <script defer src="/js/category_modal.js"></script>
+    <link rel="stylesheet" th:href="@{/css/feed/readwrite.css}" />
+    <script defer th:src="@{/js/feed/category_modal.js}"></script>
   </head>
   <body>
     <header>
@@ -15,7 +15,7 @@
             <a href="">
               <!--홈페이지 버튼 -->
               <img
-                src="/images/HippoBook_logo.png"
+                th:src="@{/images/main/HippoBook_logo.png}"
                 alt=""
                 class="header_logo_images"
               />
@@ -25,7 +25,7 @@
         <div class="header_right_layout">
           <a href="">
             <!-- 알람 페이지 이동  -->
-            <img src="/images/alarm.png" alt="" class="header_right_alarm" />
+            <img th:src="@{/images/main/alarm.png}" alt="" class="header_right_alarm" />
           </a>
           <ul class="header_right_login">
             <a href="" class="header_right_login_box">로그인</a>
@@ -37,7 +37,7 @@
         <div class="main_top_layout">
           <a href="#" onclick="return false"> 
             <!-- 카테고리  -->
-                <img src="/images/Category.png" alt="" class="main_top_category">
+                <img th:src="@{/images/main/Category.png}" alt="" class="main_top_category">
           </a>
           <div class="main_top_category_tap">
             <ul class="main_top_category_list">
@@ -75,28 +75,65 @@
                 <input type="text" class="read_titleinput"
                 placeholder="  이곳에 제목을 입력하세요" >
             </div>
+            <span>목차</span>
+            <div class="read_onelinebox">
+              <textarea
+              cols="50"
+              rows="30"
+              placeholder="이곳에 목차를 입력하세요"
+          ></textarea>
+            </div>
+            <span>책 저자</span>
+            <div class="read_datebox">
+                <input type="text" class="read_dateinput"
+                placeholder="   이곳에 저자를 입력하세요"
+                style="font-size: 12px;">
+            </div>
+            <span>저자 소개</span>
+            <div class="read_onelinebox">
+              <textarea
+              cols="100"
+              rows="10"
+              placeholder="이곳에 저자를 소개하세요"
+          ></textarea>
+            </div>
+            <span>카테고리</span>
+            <div class="read_datebox">
+                <input type="text" class="read_dateinput"
+                placeholder="   이곳에 카테고리를 입력하세요"
+                style="font-size: 12px;">
+            </div>
+            <span>페이지 수</span>
+            <div class="read_datebox">
+                <input type="text" class="read_dateinput"
+                placeholder="   이곳에 페이지 수를 입력하세요"
+                style="font-size: 12px;">
+            </div>
+            <span>책 저자</span>
+            <div class="read_datebox">
+                <input type="date" class="read_dateinput"
+                style="font-size: 15px;">
+            </div>
             <span>출판사</span>
             <div class="read_datebox">
                 <input type="text" class="read_dateinput"
                 placeholder="   이곳에 출판사를 입력하세요"
                 style="font-size: 12px;">
             </div>
-            <span>저자 소개</span>
-            <div class="read_datebox">
-                <input type="text" class="read_dateinput"
-                placeholder="   이곳에 저자를 입력하세요"
-                style="font-size: 12px;">
-            </div>
-            <span>한 줄 소개</span>
+            <span>출판사 서평</span>
             <div class="read_onelinebox">
-                <input type="text" class="read_onelineinput"
-                placeholder="   이곳에 한 줄 소개를 입력하세요">
+              <textarea
+              cols="100"
+              rows="30"
+              placeholder="이곳에 출판사 서평을 입력하세요"
+          ></textarea>
             </div>
             <span>책 소개</span>
                 <div class="read_contentbox">
                 <textarea
                     cols="100"
                     rows="50"
+                    placeholder="이곳에 책을 소개하세요"
                 ></textarea>
                 </div>
                 
