--- a/src/main/resources/static/css/main/mainpage.css
+++ b/src/main/resources/static/css/main/mainpage.css
@@ -582,18 +582,11 @@ a {
 
 /* 소설 미리보기 */
 .novel_preview {
-  padding: 32px 0;
+  padding: 32px 24px;
   height: 350px;
+
 }
 
-.novel_inner {
-  overflow: hidden;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 24px;
-  position: relative;
-  height: 350px;
-}
 
 .novel_preview_title {
   margin-bottom: 20px;
