"마이페이지 소개 프로필 닉네임, 팔로워, 팔로잉 컨트롤러까지 완료" , "마이페이지 소개글 맵퍼까지 완료"

--- a/src/main/resources/static/css/mypage/myPageInt.css
+++ b/src/main/resources/static/css/mypage/myPageInt.css
@@ -164,6 +164,10 @@ input[type="file"] {
   display: flex;
 }
 
+.profile-name-option{
+  margin-top: 2px;
+}
+
 #follow {
   display: flex;
 }
@@ -377,7 +381,7 @@ input[type="file"] {
 }
 
 .x-box {
-  background-image: url("../myPageImg/cancel.png");
+  background-image: url("/images/mypage/cancel.png");
   width: 15px;
   height: 15px;
   background-size: contain;
